--- a/sandbox/get_lipids_from_charmmgui.ipynb
+++ b/sandbox/get_lipids_from_charmmgui.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9aba0a9da11480da8d86ec1e13b0b16",
+       "model_id": "4eea2ea109504e6395d4e57bc2447e43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,94 +77,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LPPC lppc\n",
-      "DLPC dlpc\n",
-      "DLPE dlpe\n",
-      "DLPS dlps\n",
-      "DLPA dlpa\n",
-      "DLPG dlpg\n",
-      "DMPC dmpc\n",
-      "DMPE dmpe\n",
-      "DMPS dmps\n",
-      "DMPA dmpa\n",
-      "DMPG dmpg\n",
-      "DPPC dppc\n",
-      "DPPE dppe\n",
-      "DPPS dpps\n",
-      "DPPA dppa\n",
-      "DPPG dppg\n",
-      "DSPC dspc\n",
-      "DSPE dspe\n",
-      "DSPS dsps\n",
-      "DSPA dspa\n",
-      "DSPG dspg\n",
-      "DOPC dopc\n",
-      "DOPE dope\n",
-      "DOPS dops\n",
-      "DOPA dopa\n",
-      "DOPG dopg\n",
-      "POPC popc\n",
-      "POPE pope\n",
-      "POPS pops\n",
-      "POPA popa\n",
-      "POPG popg\n",
-      "SAPC sapc\n"
+      "POPC popc\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:14<00:00, 14.39s/it]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:12<00:00, 12.54s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n",
-      "SDPC sdpc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:13<00:00, 13.71s/it]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:13<00:00, 13.29s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n",
-      "SOPC sopc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:15<00:00, 15.73s/it]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:14<00:00, 14.02s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n",
-      "DAPC dapc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:16<00:00, 16.13s/it]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:14<00:00, 14.32s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:04<00:00,  4.51s/it]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:04<00:00,  4.58s/it]"
      ]
     },
     {
@@ -173,10 +94,17 @@
      "text": [
       " \n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
-    "for lipid_name in params.residues:\n",
+    "for lipid_name in ['POPC']: #params.residues:\n",
     "    \n",
     "    if lipid_name in omem.lipid.name:\n",
     "        lipid_code = lipid_name.lower()\n",
