--- a/sandbox/get_lipids_from_charmmgui.ipynb
+++ b/sandbox/get_lipids_from_charmmgui.ipynb
@@ -10,23 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "10f20195-e2e9-4e9e-9e3d-35f139674863",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4eea2ea109504e6395d4e57bc2447e43",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import molsysmt as msm\n",
     "import omembrane as omem\n",
@@ -40,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fc5e9ff2-db7e-40e3-8c28-5c491e0aab16",
    "metadata": {},
    "outputs": [],
@@ -54,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "be85c4ca-00c7-45e0-af4b-cb37cbcd1aed",
    "metadata": {},
    "outputs": [],
@@ -69,42 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2d045d3d-a017-4455-98c3-0088c4938811",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POPC popc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:04<00:00,  4.51s/it]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:04<00:00,  4.58s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for lipid_name in ['POPC']: #params.residues:\n",
+    "for lipid_name in params.residues:\n",
     "    \n",
     "    if lipid_name in omem.lipid.name:\n",
     "        lipid_code = lipid_name.lower()\n",
@@ -145,13 +102,13 @@
     "        file = tarfile.open('foo.tar.gz') \n",
     "        file.extractall(path=\"./foo\")\n",
     "    \n",
-    "        for ii in tqdm(range(1, 2)): #range(1,1001)\n",
+    "        for ii in tqdm(range(1, 10)): #range(1,1001)\n",
     "            filename = './foo/'+lipid_code+'/conf1/'+lipid_code+'_'+str(ii)+'.crd'\n",
     "            aux_lipid = msm.convert(filename)\n",
     "            aux_lipid = work_lipid(aux_lipid)\n",
     "            msm.append_structures(molsys, aux_lipid)\n",
     "\n",
-    "        for ii in tqdm(range(1, 2)): #range(1,1001)\n",
+    "        for ii in tqdm(range(1, 10)): #range(1,1001)\n",
     "            filename = './foo/'+lipid_code+'/conf2/'+lipid_code+'_'+str(ii)+'.crd'\n",
     "            aux_lipid = msm.convert(filename)\n",
     "            aux_lipid = work_lipid(aux_lipid)\n",
@@ -171,7 +128,7 @@
     "        print(src_web)\n",
     "        print('     ...without coordinates')\n",
     "\n",
-    "    del(parmed_structure, molsys)\n",
+    "    #del(parmed_structure, molsys)\n",
     "\n",
     "    print(' ')"
    ]
@@ -179,7 +136,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7d705eb-5ff1-491d-b7a2-d55a957adb92",
+   "id": "13afc263-7e16-4c8e-a460-4c6571e00bcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msm.view(molsys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8bb4cfd-f128-449e-9d25-cb648686cdd7",
    "metadata": {},
    "outputs": [],
    "source": []
